--- a/dao-spring-jdbc/pom.xml
+++ b/dao-spring-jdbc/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>ojdbc7</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
