--- a/dao-spring-jdbc/pom.xml
+++ b/dao-spring-jdbc/pom.xml
@@ -55,6 +55,12 @@
             <version>2.3.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.21</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
