支持MySql分页查询

--- a/dao-spring-jdbc/src/test/resources/spring_jdbc.properties
+++ b/dao-spring-jdbc/src/test/resources/spring_jdbc.properties
@@ -1,8 +1,13 @@
 #Hikari DataSource properties
-hikaricp.dataSourceClassName=oracle.jdbc.pool.OracleDataSource
-hikaricp.dataSource.url=jdbc:oracle:thin:@172.28.250.92:1521:devdb
-hikaricp.dataSource.username=accuser
-hikaricp.dataSource.password=oracle
+#hikaricp.dataSourceClassName=oracle.jdbc.pool.OracleDataSource
+#hikaricp.dataSource.url=jdbc:oracle:thin:@172.28.250.92:1521:devdb
+#hikaricp.dataSource.username=accuser
+#hikaricp.dataSource.password=oracle
+
+hikaricp.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+hikaricp.dataSource.url=jdbc:mysql://172.28.250.240:3306/jeecg
+hikaricp.dataSource.username=jeecg
+hikaricp.dataSource.password=jeecg
 
 hikaricp.poolName=testMasterPool
 hikaricp.autoCommit=false
