--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.sand.sqlbuild</groupId>
 	<artifactId>sqlbuild</artifactId>
 	<packaging>pom</packaging>
-	<version>0.1.20</version>
+	<version>0.1.21</version>
 
 	<modules>
 		<module>builder</module>
@@ -88,6 +88,7 @@
 		<logback.version>1.1.3</logback.version>
         <oracle.version>0.0.1</oracle.version>
         <hikaricp.version>2.3.6</hikaricp.version>
+        <lombok.version>1.16.6</lombok.version>
 	</properties>
 
 	<dependencies>
@@ -139,6 +140,12 @@
                 <groupId>com.oracle</groupId>
                 <artifactId>ojdbc7</artifactId>
                 <version>${oracle.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
                 <scope>test</scope>
             </dependency>
 		</dependencies>
