--- a/dao-spring-jdbc/pom.xml
+++ b/dao-spring-jdbc/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.sand.sqlbuild</groupId>
         <artifactId>sqlbuild</artifactId>
-        <version>0.1.25</version>
+        <version>0.1.26</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -29,6 +29,8 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+
+        <!-- test -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
@@ -89,6 +91,7 @@
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.4</version>
+            <scope>test</scope>
 		</dependency>
     </dependencies>
 
